--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BupaCodeChallenge</string>
+    <string name="app_name">JetpackComposeApp</string>
     <string name="text_home">Trending Cars</string>
     <string name="text_details">Car Details</string>
 </resources>
